# QtCmakeSkeleteon

./: BoardInput.cpp  BoardInput.h  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowController.cpp  MainWindowController.h  main.cpp
