cmake_minimum_required(VERSION 2.8)
PROJECT(MidiAwesomeness)
set(CMAKE_BUILD_TYPE DEBUG)
FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Widgets)
ADD_DEFINITIONS(${QT_DEFINITIONS})

SET(PROJECT_SOURCES main.cpp MainWindow.cpp MainWindowController.cpp BoardInput.cpp)
SET(PROJECT_FORMS MainWindow.ui)
SET(PROJECT_HEADERS MainWindow.h MainWindowController.h BoardInput.h)

QT5_WRAP_CPP(PROJECT_HEADERS_MOC ${PROJECT_HEADERS})
QT5_WRAP_UI(PROJECT_FORMS_HEADERS ${PROJECT_FORMS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE(MidiAwesomeness
    ${PROJECT_SOURCES}
    ${PROJECT_HEADERS_MOC}
    ${PROJECT_FORMS_HEADERS}
)
qt5_use_modules (MidiAwesomeness Widgets)

TARGET_LINK_LIBRARIES(MidiAwesomeness ${QT_LIBRARIES})
